--- a/compra.html
+++ b/compra.html
@@ -18,7 +18,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <a class="navbar-brand" href="/compra.html">Grupo 3</a>
+                <a class="navbar-brand" href="compra.html">Grupo 3</a>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Calculadora</a>
@@ -28,7 +28,7 @@
                     </li>
                     
                 </ul>
-                <a class="imagen ms-auto" href="/compra.html"><img  src="/templace/carrito.png"  alt="" width="40px" height="35px"></a>
+                <a class="imagen ms-auto" href="compra.html"><img  src="templace/carrito.png"  alt="" width="40px" height="35px"></a>
               </div>
             </div>
         </nav>
